compiler/packages/babel-plugin-react-compiler/src/__tests__/fixtures/compiler/exhaustive-deps/error.invalid-exhaustive-effect-deps.js
// @validateExhaustiveEffectDependencies
import {useEffect} from 'react';

function Component({x, y, z}) {
  // error: missing dep - x
  useEffect(() => {
    console.log(x);
  }, []);

  // error: extra dep - y
  useEffect(() => {
    console.log(x);
  }, [x, y]);
}
